oj/temp_files/tem_1551540458.1.compile_error
./temp_files/tem_1551540458.1.cpp: In function ‘int main()’:
./temp_files/tem_1551540458.1.cpp:5:8: error: ‘o’ was not declared in this scope
 return o;
        ^
